# tut

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
src/: def.h  main.cpp  tut.h
src/anim/: anim.h  context.cpp  context.h
src/anim/input/: input.cpp  input.h  input_defenitions.h
src/anim/units/: units.h  units_defenitions.h
src/anim/window/: window.h  window_defenitions.h
src/anim/windows/: windows.h
src/app/components/: sprite.h
src/render/primitives/: image.h
src/system/: context.h  messages.cpp  messages.h
src/system/input/: input.cpp  input.h  input_defenitions.h
src/system/object/: object.h  object_manager.h
src/system/render/: render.h  render_defenitions.h
src/system/window/: window.h  window_defenitions.h
src/units/: unit_test.h
src/utility/: async.h  image.h  resource.h  types.h
src/utility/math/: mth.h  mth_cam.h  mth_matr.h  mth_noise.h  mth_ray.h  mth_size.h  mth_vec2.h  mth_vec3.h  mth_vec4.h  mthdef.h
